# stam_annotator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
P000216/P000216.opf/layers/: v001.opf.json
data/: Chapter.yml  Sabche.yml  opa_catalog.csv
data/opa/: 36CA.yml
data/opf/: BookTitle.yml  Tsawa.yml  v001.txt
data/opf/bo/: Segment.yml
data/opf/en/: Segment.yml
data/opf_with_payload/: v001.txt
docs/: README.md  _sidebar.md  getting-started.md  help.md  reference.md  usage.md
src/openpecha2/: config.py  github_utils.py  stam_manager.py  utility.py  utils.py
src/openpecha2/alignment/: __init__.py
src/openpecha2/core/: pecha.py
src/openpecha2/loaders/: annotation_store.py  opa_loader.py  opf_loader.py
src/openpecha2/serializers/: config.py  (+2 more)
src/stam_annotator/: alignment.py  annotation_store.py  annotations_loader.py  config.py  convert_to_stam.py  create_stam.py  definations.py  enums.py  exceptions.py  fetch_convert_repos.py  load_stam.py  load_yaml.py  load_yaml_annotations.py  opa_annotation_to_stam.py  opa_annotations_loader.py  opa_loader.py  opa_to_stam.py  opf_annotation_to_stam.py  opf_annotations_loader.py  opf_loader.py  opf_to_stam.py  stam_annotation_model.py  stam_manager.py  utility.py
tests/: config.py  test_annotation_loader.py  test_load_yaml.py  test_load_yaml_annotations.py  test_opf_loader.py
tests/data/: opf_author.yml  opf_quotations.yml
tests/opa_opf_loader/: test_load_yaml.py  test_opf_loader.py
tests/opf/: test_opf_loader.py
tests/serializer/: test_alignment_md.py  test_md.py  test_pecha_md.py
(+56 files in other folders)
